--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,77 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+	font-family: Arial, Helvetica, sans-serif;
+	padding: 0;
+	margin: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#navbar {
+	list-style: none;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	background-color: red;
+	padding-top: 20px;
+	padding-bottom: 25px;
+	font-size: 22px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.article-list {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	padding-left: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.article-item {
+	display: flex;
+	flex-direction: column;
+	font-size: 8px;
+	justify-content: space-between;
+	font-family: Arial, Helvetica, sans-serif;
+	align-items: center;
+	text-align: center;
+	text-wrap: wrap;
+	border: 3px red;
+	border-style: dotted solid solid dotted;
+	margin: 15px;
+	border-radius: 5px;
+	width: 25rem;
+	height: 20rem;
+	padding-bottom: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
 }
 
-.card {
-  padding: 2em;
+img {
+	min-width: 75%;
+	min-height: 65%;
+	max-height: 65%;
+	max-width: 75%;
+	padding-bottom: 10px;
+	padding-top: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+h1 {
+	display: flex;
+	justify-content: center;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+h2 {
+	display: flex;
+	justify-content: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+h3 {
+	font-size: 20px;
+	margin: 0;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.article-item > p {
+	font-size: 16px;
 }
