--- a/src/App.css
+++ b/src/App.css
@@ -139,3 +139,37 @@ h3 {
 	justify-content: space-between;
 	padding-bottom: 10px;
 }
+
+.votes {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	color: black;
+}
+
+.comment-container > button {
+	background-color: red; /* Green */
+	border: none;
+	padding: 5px;
+	margin: 3px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	width: 35px;
+	height: 35px;
+}
+
+.second-line {
+	display: flex;
+	justify-content: space-between;
+}
+
+.comment-container {
+	display: flex;
+	flex-direction: column;
+}
+
+.comment-container > h3 {
+	margin-left: 50px;
+}
