--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
 	margin: 0;
 }
 
+body {
+	margin-left: 1vw;
+	margin-right: 1vw;
+}
+
 a {
 	all: unset;
 }
@@ -140,24 +145,32 @@ h3 {
 	padding-bottom: 10px;
 }
 
-.votes {
+.votes-container {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	color: black;
 }
 
-.comment-container > button {
-	background-color: red; /* Green */
+@media screen and (max-width: 1000px) {
+	.votes-container {
+		flex-direction: column;
+	}
+}
+
+.votes-btn {
+	background-color: red;
 	border: none;
 	padding: 5px;
 	margin: 3px;
-	text-align: center;
 	text-decoration: none;
-	display: inline-block;
 	font-size: 16px;
 	width: 35px;
 	height: 35px;
+	cursor: pointer;
+}
+
+.votes-btn:active {
+	scale: 0.8;
 }
 
 .second-line {
