--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,7 @@ h3 {
 }
 
 .comment {
-	padding: 10px 50px 10px 50px;
+	padding: 10px 10px 50px;
 	border: solid red 2px;
 	margin: 10px 50px 10px 50px;
 }
@@ -167,6 +167,7 @@ h3 {
 	width: 35px;
 	height: 35px;
 	cursor: pointer;
+	border-radius: 10px;
 }
 
 .votes-btn:active {
@@ -199,4 +200,49 @@ h3 {
 .article-votes-container {
 	display: flex;
 	align-items: center;
+}
+
+.form-field-container {
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	padding: 0px;
+	margin: 10px 0px 10px 0px;
+}
+
+.comment-submit-btn {
+	background-color: red;
+	border: none;
+	border-radius: 10px;
+	text-decoration: none;
+	font-size: 16px;
+	width: 100%;
+	height: 35px;
+	cursor: pointer;
+	font-weight: bold;
+}
+
+.comment-submit-btn:active {
+	scale: 0.99;
+}
+
+input,
+textarea,
+button,
+select {
+	width: 100%;
+}
+
+.form-container {
+	display: flex;
+	flex-direction: column;
+	border: solid red 2px;
+	padding: 10px 25px 10px 25px;
+	margin: 10px 50px 10px 50px;
+}
+
+.success-comment-msg {
+	color: black;
+	justify-content: center;
 }
