--- a/src/App.css
+++ b/src/App.css
@@ -273,3 +273,26 @@ select {
 	align-items: left;
 	justify-self: left;
 }
+
+.topic-select-btn {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: red;
+	border: none;
+	border-radius: 10px;
+	text-decoration: none;
+	margin: 25px;
+	font-size: 16px;
+	width: 60vw;
+	height: 35px;
+	cursor: pointer;
+	font-weight: bold;
+}
+
+.topic-btn-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
