--- a/src/App.css
+++ b/src/App.css
@@ -90,8 +90,8 @@ a {
 	min-height: 65%;
 	max-height: 65%;
 	max-width: 75%;
-	padding-bottom: 10px;
-	padding-top: 10px;
+	padding-bottom: 0;
+	padding-top: 0;
 }
 
 h1 {
@@ -106,13 +106,6 @@ h2 {
 	justify-content: center;
 	padding-top: 10px;
 	padding-bottom: 10px;
-}
-
-h3 {
-	font-size: 20px;
-	margin: 0;
-	padding-top: 5px;
-	padding-bottom: 5px;
 }
 
 .article-item > p {
@@ -291,8 +284,16 @@ select {
 	font-weight: bold;
 }
 
-.topic-btn-container {
+.topic-btn-list {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	list-style: none;
+	cursor: pointer;
+}
+
+.sort-form {
+	display: flex;
+	margin-right: 35vw;
+	margin-left: 35vw;
 }
