--- a/src/App.css
+++ b/src/App.css
@@ -214,22 +214,6 @@ h2 {
 	margin: 10px 0px 10px 0px;
 }
 
-.comment-submit-btn {
-	background-color: red;
-	border: none;
-	border-radius: 10px;
-	text-decoration: none;
-	font-size: 16px;
-	width: 100%;
-	height: 35px;
-	cursor: pointer;
-	font-weight: bold;
-}
-
-.comment-submit-btn:active {
-	scale: 0.99;
-}
-
 input,
 textarea,
 button,
@@ -252,6 +236,7 @@ select {
 }
 
 .delete-btn {
+	padding: 0;
 	margin-right: 10px;
 	background-color: red;
 	border: none;
@@ -263,7 +248,6 @@ select {
 	min-width: 35px;
 	min-height: 35px;
 	cursor: pointer;
-	font-weight: bold;
 }
 
 .delete-msg {
@@ -318,9 +302,105 @@ select {
 	align-items: center;
 }
 
+button:active {
+	scale: 0.95;
+}
+
+button {
+	padding: 0.5rem 1rem;
+	border: none;
+	border-radius: 4px;
+	background-color: red;
+	color: white;
+	cursor: pointer;
+  }
+
 button:disabled {
 	color: black;
 	cursor: initial;
 	pointer-events: none;
 	background-color: gray;
 }
+
+.user-li {
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+		padding-left: 0;
+}
+
+.img-user-list {
+	min-width: 75%;
+	min-height: 65%;
+	max-height: 65%;
+	max-width: 75%;
+	padding-bottom: 0;
+	padding-top: 0;
+}
+
+
+.user-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	font-family: Arial, Helvetica, sans-serif;
+	align-items: center;
+	text-align: center;
+	text-wrap: wrap;
+	border: 3px red;
+	border-style: dotted solid solid dotted;
+	margin: 15px;
+	border-radius: 5px;
+	width: 25rem;
+	height: 20rem;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1rem;
+  }
+  
+  .user-header {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	gap: 0.5rem;
+	margin-left: auto;
+  }
+  
+  .user-info {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+  }
+  
+  .user-img-header {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	object-fit: cover;
+  }
+  
+  .user-text {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+  }
+  
+  .logged-in-msg {
+	margin: 0;
+	font-size: 12px;
+  }
+  
+  .user-logged-in {
+	margin: 0;
+	font-weight: bold;
+	font-size: 14px;
+  }
+  
